Inserted background mountains and path on front page
Inserted svg files with mountains and path in html. Put id's on the divs and the img. Styled in css with relative positions on the div elements and absolute positions on the img files. Created a mid point in the div with "left: 50%". The img files styled and placed according to the mid point in the div element.
Added z-index to the img files, so they lay in the correct order (behind the main elements, as a background).

--- a/index.css
+++ b/index.css
@@ -115,3 +115,39 @@
     background-color: #093409;
     color: #F2EFDE;
 }
+
+/* Front page illustrations - mountains */
+
+#mountains {
+    position: relative;
+    left: 50%;
+    width: 0;
+}
+
+#left-mountains {
+    position: absolute;
+    bottom: 45px;
+    right: -43px;
+    z-index: 2;
+}
+
+#right-mountains {
+    position: absolute;
+    bottom: 31px;
+    left: -66px;
+    z-index: 3;
+}
+
+#path-position {
+    position: relative;
+    left: 50%;
+    width: 0;
+}
+
+#path {
+    position: absolute;
+    top: -46px;
+    left: -175px;
+    z-index: -5;
+}
+
