Added z-index to header
Bug appeared when scrolling over the mountains, they were on top of the header elements. Added z-index 20 on all header elements in css made the header stay on top of it all.

--- a/base.css
+++ b/base.css
@@ -88,10 +88,13 @@ header {
     top: 0px;
 
     background: #093409;
+
+    z-index: 20;
 }
 
 header img {
     height: 45px;
+    z-index: 20;
 }
 
 /* ------------------------------------------------------------------------------------------------------- */
