Created projects.html and added content
Created projects.html and projects.css. Added fonts, header and footer from index.html. Created projects section and added content for the different projects that are supposed to displayed. Styled the project elements for mobile version. Having trouble with making the style resposive for larger screens. Added photos of projects and arrow illustation.

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-/* This is a CSS document */
+/* CSS Document */
+
 
 /* Main Introduction */
 
@@ -38,6 +39,7 @@ main {
 
 
 /* Main Introduction Path */
+
 #front-page-content {
     display: flex;
     flex-direction: column;
@@ -74,6 +76,7 @@ main {
     justify-content: flex-end;
 }
 
+
 /* Front page call to action */
 
 #fp-call-to-action {
@@ -91,12 +94,12 @@ main {
 .cta-button {
     /* Neutralize the default styles on the semantic tag button */
     background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
 
     /* Button style */
     display: flex;
@@ -121,7 +124,8 @@ main {
     color: #F2EFDE;
 }
 
-/* Front page illustrations - mountains */
+
+/* Front page illustrations - mountains and path */
 
 #mountains {
     position: relative;
@@ -155,4 +159,3 @@ main {
     left: -175px;
     z-index: -5;
 }
-
