--- a/base.css
+++ b/base.css
@@ -75,6 +75,11 @@ h5 {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* ------------------------------------------------------------------------------------------------------- */
 
 /* Header */
@@ -95,6 +100,10 @@ header {
 header img {
     height: 45px;
     z-index: 20;
+}
+
+header a {
+    height: 45px;
 }
 
 /* ------------------------------------------------------------------------------------------------------- */
