--- a/projects.css
+++ b/projects.css
@@ -25,25 +25,23 @@
 #projects {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 0 15px;
     gap: 120px;
-    max-width: 762px;
+    align-items: center;
 }
 
 .project-box {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
+    max-width: 762px;
 }
 
 .project-box-headline {
     display: flex;
     padding: 15px;
     color: #F2EFDE;
-    text-align: center;
-    width: 91.66%;
+    justify-content: center;
 
     background-color: #093409;
     border-top-left-radius: 10px;
@@ -53,19 +51,18 @@
 .project-box-image {
     display: flex;
     justify-content: center;
-    padding: 15px 0;
+    padding: 15px;
     background: #247022;
 }
 
 .box-image {
     border-radius: 10px;
-    width: 91.66%;
+    width: 100%;
 }
 
 .project-box-arrow-down {
     display: flex;
     padding: 15px 0;
-    width: 100%;
     justify-content: center;
 
     background: #247022;
