Relocated cta button style to base.css and created cta button in projects.html
Moved the button class to be used for different html files. Created cta button for projects and styled it in projects-css.

--- a/projects.css
+++ b/projects.css
@@ -71,3 +71,10 @@
 }
 
 
+/* Call to action button -> specific style on button is in base.css*/
+
+#projects-cta {
+    display: flex;
+    justify-content: center;
+    padding: 60px 15px;
+}
