--- a/base.css
+++ b/base.css
@@ -108,6 +108,42 @@ header a {
 
 /* ------------------------------------------------------------------------------------------------------- */
 
+/* Call to action button */
+.cta-button {
+    /* Neutralize the default styles on the semantic tag button */
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+
+    /* Button style */
+    display: flex;
+    width: 92.30%;
+    max-width: 500px;
+    height: 49px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+
+    border-radius: 10px;
+    background-color: #81C730;
+}
+
+.cta-button:hover {
+    background-color: #247022;
+    color: #F2EFDE;
+}
+
+.cta-button:active {
+    background-color: #093409;
+    color: #F2EFDE;
+}
+
+/* ------------------------------------------------------------------------------------------------------- */
+
 /* Footer */
 footer {
     width: 100%;
