Added link in footer contact
Added link in footer to LinkedIn, and created a class for the elements in the div (id="footer-contact-information") element. Added target blank to the link, for the link to open in a new window.

--- a/base.css
+++ b/base.css
@@ -168,7 +168,7 @@ footer {
     gap: 25px;
 }
 
-#footer-contact-information div {
+.footer-contact {
     display: flex;
     flex-direction: column;
     align-items: center;
