--- a/about.css
+++ b/about.css
@@ -114,69 +114,44 @@
     padding: 15px;
     gap: 15px;
     max-width: 762px;
-    height: 630px;
 
     background-color: #DBD1AD;
     border-radius: 10px;
 }
 
-.hobbies-box div img {
+.img-and-icons {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hobby-image {
     border-radius: 10px;
     width: 100%;
 }
 
-.img-and-icons {
-    position: relative;
-}
-
-.img-icons-dots {
+.hobby-dots {
     position: absolute;
-    height: 15px;
-    width: 15px;
-}
-
-.dot1 {
-    top: 10%;
-    left: 10%;
-}
-
-.dot2 {
-    top: 30%;
-    left: 20%;
-}
-
-.dot3 {
-    top: 40%;
-    left: 50%;
-}
-
-.dot4 {
-
-}
-
-
-
-
-
-
-
-
-.img-icons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.img-icons-arrows {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 50px;
-    width: 100%;
-    padding: 10px;
-}
-
-/* .img-icons-dots {
+    bottom: 10px;
     display: flex;
     gap: 15px;
-} */
+}
+
+.hobby-dots img {
+    width: 15px;
+    height: 15px;
+}
+
+.hobby-arrows img {
+    position: absolute;
+    height: 50px;
+}
+
+.hobby-arrows img:first-child {
+    left: 10px;
+}
+
+.hobby-arrows img:last-child {
+    right: 10px;
+}
