--- a/about.css
+++ b/about.css
@@ -10,7 +10,7 @@
     margin-top: 60px;
     margin-bottom: 30px;
     gap: 60px;
-    padding: 15px;
+    padding: 0 15px;
 }
 
 #intro-about img {
