--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,9 @@
 main {
     margin-top: 60px;
     margin-bottom: 60px;
+
+    display: flex;
+    flex-direction: column;
     gap: 60px;
 }
 
@@ -35,4 +38,40 @@ main {
     gap: 15px;
     width: 92.30%;
     max-width: 762px;
+}
+
+
+/* Contact Box section */
+
+#contact-box {
+    display: flex;
+    justify-content: center;
+}
+
+/* > means only 1 level in */
+#contact-box>div {
+    display: flex;
+    padding: 15px;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 0 15px;
+    width: 92.30%;
+    max-width: 762px;
+    gap: 30px;
+
+    border-radius: 10px;
+    background-color: #247022;
+    color: #F2EFDE;
+}
+
+#column-1 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#column-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
