--- a/index.css
+++ b/index.css
@@ -50,8 +50,14 @@ main {
 
 .image-side-aligned {
     display: flex;
-    width: 300px;
-    height: 300px;
+    justify-content: center;
+    padding: 0 60px 0 0px;
+}
+
+.index-image {
+    width: 100%;
+    max-width: 762px;
+    border-radius: 10px;
 }
 
 .fp-textbox {
