--- a/about.css
+++ b/about.css
@@ -98,6 +98,31 @@
     justify-content: center;
 }
 
+.quali-middle-box {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    gap: 15px;
+
+    background-color: #DBD1AD;
+}
+
+.quali-programs {
+    display: flex;
+    justify-content: space-between;
+    max-width: 375px;
+}
+
+.quali-bottom {
+    display: flex;
+    justify-content: flex-end;
+    padding: 15px;
+
+    background-color: #093409;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 
 /* Hobbies section */
 
