Created middle and bottom part in qualifications section in about.html
Added all illustrations of logos, paragraphs and styled in about.css.

--- a/about.css
+++ b/about.css
@@ -113,6 +113,10 @@
     max-width: 375px;
 }
 
+.quali-programs img {
+    border-radius: 12px;
+}
+
 .quali-bottom {
     display: flex;
     justify-content: flex-end;
