--- a/projects.css
+++ b/projects.css
@@ -62,7 +62,7 @@
 }
 
 .box-bodytext {
-    display: flex;
+    display: none;
     flex-direction: column;
     padding: 15px;
     gap: 15px;
@@ -77,10 +77,20 @@
     background: #247022;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    cursor: pointer;
+}
+
+    /* Active */
+    /* Here .box.bodytext gets targeted if .project-box and .active is on an element above */
+.project-box.active .box-bodytext {
+    display: flex;
+}
+.project-box.active .project-box-arrow-down img {
+    transform: rotate(180deg);
 }
 
 
-/* Call to action button -> specific style on button is in base.css*/
+/* Call to action button -> the specific style on button is in base.css*/
 
 #projects-cta {
     display: flex;
